## Process this file with automake to produce Makefile.in
# Copyright (C) 2002, 2003 Simon Josefsson.
#
# This file is part of Shishi.
#
# Shishi is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# Shishi is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Shishi; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4	\
	inttypes_h.m4 inttypes.m4 inttypes-pri.m4 isc-posix.m4		\
	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 nls.m4 pkg.m4	\
	po.m4 progtest.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4		\
	ax_create_stdint_h.m4 ac_compile_check_sizeof.m4 libgnutls.m4	\
	libgcrypt.m4 gtk-doc.m4
