INCLUDES = -I. -I$(top_builddir)/../../asn1/lib -I$(top_builddir)/../../lib -I$(top_builddir)/include -I$(top_srcdir)

noinst_LIBRARIES = libtelnet.a

libtelnet_a_SOURCES = auth.c enc_des.c encrypt.c forward.c genget.c getent.c kerberos.c kerberos5.c shishi.c misc.c read_passwd.c

noinst_HEADERS = auth-proto.h auth.h enc-proto.h encrypt.h key-proto.h misc-proto.h misc.h
